tests/tests/snapshots/test__typescript__inline-both.snap
---
source: tests/tests/typescript.rs
expression: "dts.iter().map(|(s, ty)|\nprimitives::inline(&ts, &types,\nty).map(|ty| format!(\"{s}: {ty}\"))).collect::<Result<Vec<_>,\n_>>().unwrap().join(\"\\n\")"
---
i8: number
i16: number
i32: number
i64: number
i128: number
isize: number
u8: number
u16: number
u32: number
u64: number
u128: number
usize: number
f32: number
f64: number
bool: boolean
char: string
Range<i32>: {
	start: number,
	end: number,
}
RangeInclusive<i32>: {
	start: number,
	end: number,
}
(): null
(String, i32): [string, number]
(String, i32, bool): [string, number, boolean]
((String, i32), (bool, char, bool), ()): [[string, number], [boolean, string, boolean], null]
(bool, bool, bool, bool, bool, bool, bool, bool, bool, bool, bool, bool): [boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean, boolean]
(Vec<i32>, Vec<bool>): [number[], boolean[]]
String: string
PathBuf: string
IpAddr: string
Ipv4Addr: string
Ipv6Addr: string
SocketAddr: string
SocketAddrV4: string
SocketAddrV6: string
Cow<'static, str>: string
Cow<'static, i32>: number
SystemTime: {
	duration_since_epoch: number,
	duration_since_unix_epoch: number,
}
Duration: {
	secs: number,
	nanos: number,
}
&'static str: string
&'static bool: boolean
&'static i32: number
Vec<i32>: number[]
&'static [i32]: number[]
&'static [i32; 3]: [number, number, number]
[i32; 3]: [number, number, number]
Vec<MyEnum>: MyEnum[]
&'static [MyEnum]: MyEnum[]
&'static [MyEnum; 6]: [MyEnum, MyEnum, MyEnum, MyEnum, MyEnum, MyEnum]
[MyEnum; 2]: [MyEnum, MyEnum]
&'static [i32; 1]: [number]
&'static [i32; 0]: []
Option<i32>: number | null
Option<()>: null | null
Option<Vec<i32>>: number[] | null
Vec<Option<Cow<'static, i32>>>: (number | null)[]
Option<Vec<Cow<'static, i32>>>: number[] | null
[Vec<String>; 3]: [string[], string[], string[]]
Option<Option<String>>: string | null
Option<Option<Option<String>>>: string | null
PhantomData<()>: null
PhantomData<String>: null
Infallible: never
Unit1: null
Unit2: Record<string, never>
Unit3: []
Unit4: null
Unit5: "A"
Unit6: { A: [] }
Unit7: { A: Record<string, never> }
SimpleStruct: {
	a: number,
	b: string,
	c: [number, string, number],
	d: string[],
	e: string | null,
}
TupleStruct1: number
TupleStruct3: [number, boolean, string]
TestEnum: "Unit" | { Single: number } | { Multiple: [number, number] } | { Struct: { a: number } }
RefStruct: TestEnum
InlinerStruct: {
	inline_this: {
		ref_struct: SimpleStruct,
		val: number,
	},
	dont_inline_this: RefStruct,
}
GenericStruct<i32>: {
	arg: number,
}
GenericStruct<String>: {
	arg: string,
}
FlattenEnumStruct: (FlattenEnum) & {
	outer: string,
}
OverridenStruct: {
	overriden_field: string,
}
HasGenericAlias: { [key in number]: string }
EnumMacroAttributes: { A: string } | { B: number } | { C: number } | { D: { a: string; b: number } }
InlineEnumField: { A: {
	a: string,
} }
InlineOptionalType: {
	optional_field: {
		a: string,
	} | null,
}
Rename: "OneWord" | "TwoWords"
TransparentType: TransparentTypeInner
TransparentType2: null
TransparentTypeWithOverride: string
[Option<u8>; 3]: [(number | null), (number | null), (number | null)]
HashMap<BasicEnum, ()>: Partial<{ [key in BasicEnum]: null }>
Option<Option<Option<Option<i32>>>>: number | null
Vec<PlaceholderInnerField>: PlaceholderInnerField[]
HashMap<BasicEnum, i32>: Partial<{ [key in BasicEnum]: number }>
EnumReferenceRecordKey: {
	a: Partial<{ [key in BasicEnum]: number }>,
}
FlattenOnNestedEnum: (NestedEnum) & {
	id: string,
}
MyEmptyInput: Record<string, never>
(String): string
(String,): [string]
ExtraBracketsInTupleVariant: { A: string }
ExtraBracketsInUnnamedStruct: string
Vec<MyEnum>: MyEnum[]
InlineTuple: {
	demo: [string, boolean],
}
InlineTuple2: {
	demo: [{
		demo: [string, boolean],
	}, boolean],
}
Box<str>: string
Box<String>: string
SkippedFieldWithinVariant: never | string
KebabCase: {
	test_ing: string,
}
&[&str]: string[]
Issue281<'_>: {
	default_unity_arguments: string[],
}
RenameWithWeirdCharsField: {
	odata_context: string,
}
RenameWithWeirdCharsVariant: { A: string }
Issue374: {
	foo: boolean,
	bar: boolean,
}
type_type::Type: never
ActualType: {
	a: GenericType<string>,
}
SpectaTypeOverride: {
	string_ident: string,
	u32_ident: number,
	path: string,
}
ContainerTypeOverrideStruct: string
ContainerTypeOverrideEnum: string
ContainerTypeOverrideGeneric<Box<dyn Any>>: string
ContainerTypeOverrideToGeneric<i32>: number
InvalidToValidType: {
	cause: null | null,
}
TupleStruct: string
TupleStructWithRep: string
GenericTupleStruct<String>: string
BracedStruct: string
StructRenameAllUppercase: {
	a: number,
	b: number,
}
RenameSerdeSpecialChar: {
	b: number,
}
EnumRenameAllUppercase: "HelloWorld" | "VariantB" | "TestingWords"
Recursive: {
	demo: Recursive,
}
RecursiveMapValue: {
	demo: { [key in string]: RecursiveMapValue },
}
RecursiveTransparent: RecursiveInline
RecursiveInEnum: { A: (RecursiveInEnum) }
NonOptional: string | null
OptionalOnNamedField: string | null
OptionalOnTransparentNamedField: {
	b: string | null,
}
OptionalInEnum: { A: string | null } | { B: { a: string | null } } | { C: { a?: string | null } }
Optional: {
	a: number | null,
	b?: number | null,
	c: string | null,
	d: boolean,
}
UntaggedVariants: string | number | { id: string } | [string, boolean]
UntaggedVariantsWithoutValue: string | [number, string] | number
HashMap<String, ()>: { [key in string]: null }
Regular: { [key in string]: null }
HashMap<Infallible, ()>: { [key in never]: null }
HashMap<UnitVariants, ()>: Partial<{ [key in UnitVariants]: null }>
HashMap<UntaggedVariantsKey, ()>: Partial<{ [key in UntaggedVariantsKey]: null }>
HashMap<Variants, ()>: Partial<{ [key in Variants]: null }>
MacroStruct: string
MacroStruct2: {
	demo: string,
}
MacroEnum: { Demo: string } | { Demo2: { demo2: string } }
DeprecatedType: {
	a: number,
}
DeprecatedTypeWithMsg: {
	a: number,
}
DeprecatedTypeWithMsg2: {
	a: number,
}
DeprecatedFields: {
	a: number,
	/**
	 * @deprecated
	 */
	b: string,
	/**
	 * @deprecated This field is cringe!
	 */
	c: string,
	/**
	 * @deprecated This field is cringe!
	 */
	d: string,
}
DeprecatedTupleVariant: [
/**
 * @deprecated
 */
string, 
/**
 * @deprecated Nope
 */
string, 
/**
 * @deprecated Nope
 */
number]
DeprecatedEnumVariants: 
/**
 * @deprecated
 */
"A" | 
/**
 * @deprecated Nope
 */
"B" | 
/**
 * @deprecated Nope
 */
"C"
CommentedStruct: {
	/**
	 *  Some triple-slash comment
	 *  Some more triple-slash comment
	 */
	a: number,
}
CommentedEnum: 
/**
 *  Some triple-slash comment
 *  Some more triple-slash comment
 */
{ A: number } | 
/**
 *  Some triple-slash comment
 *  Some more triple-slash comment
 */
{ B: { 
/**
 *  Some triple-slash comment
 *  Some more triple-slash comment
 */
a: number } }
SingleLineComment: 
/**
 *  Some single-line comment
 */
{ A: number } | 
/**
 *  Some single-line comment
 */
{ B: { 
/**
 *  Some single-line comment
 */
a: number } }
NonGeneric: {
	a: number,
	b: boolean,
}
HalfGenericA<u8>: {
	a: number,
	b: boolean,
}
HalfGenericB<bool>: {
	a: number,
	b: boolean,
}
FullGeneric<u8, bool>: {
	a: number,
	b: boolean,
}
Another<bool>: {
	a: number,
	b: boolean,
}
MapA<u32>: { [key in string]: number }
MapB<u32>: { [key in number]: string }
MapC<u32>: { [key in string]: AGenericStruct<number> }
AGenericStruct<u32>: {
	field: {
	a: number,
	b: boolean,
},
}
A: {
	a: B,
	b: {
		b: number,
	},
	c: B,
	d: {
		flattened: number,
	},
	e: {
		generic_flattened: number,
	},
}
DoubleFlattened: {
	a: ToBeFlattened,
	b: ToBeFlattened,
}
FlattenedInner: {
	c: Inner,
}
BoxFlattened: {
	b: BoxedInner,
}
BoxInline: {
	c: {
		a: number,
	},
}
First: {
	a: string,
}
Second: {
	a: number,
}
Third: (First) & {
	b: { [key in string]: string },
	c: First,
}
Fourth: {
	a: First,
	b: {
		a: string,
	},
}
TagOnStructWithInline: {
	a: First,
	b: {
		a: string,
	},
}
Sixth: {
	a: First,
	b: First,
}
Seventh: {
	a: First,
	b: Second,
}
Eight: { A: string } | "B"
Tenth: string | null | {
	a: string,
} | First
MyEnumTagged: (First)
MyEnumExternal: { Variant: (First) }
MyEnumAdjacent: (First)
MyEnumUntagged: (First)
EmptyStruct: Record<string, never>
EmptyStructWithTag: Record<string, never>
AdjacentlyTagged: A | { id: string; method: string } | string
LoadProjectEvent: { project_name: string } | { project_name: string; status: string; progress: number } | { project_name: string }
ExternallyTagged: "A" | { B: { id: string; method: string } } | { C: string }
InternallyTaggedB: string
InternallyTaggedC: string[]
InternallyTaggedD: { [key in string]: string }
InternallyTaggedE: null
InternallyTaggedF: InternallyTaggedFInner
InternallyTaggedG: InternallyTaggedGInner
InternallyTaggedH: InternallyTaggedHInner
InternallyTaggedI: InternallyTaggedIInner
InternallyTaggedL: A | B
InternallyTaggedM: { type: "A" }
StructWithAlias: {
	field: string,
}
StructWithMultipleAliases: {
	field: string,
}
StructWithAliasAndRename: {
	field: string,
}
EnumWithVariantAlias: "Variant" | "Other"
EnumWithMultipleVariantAliases: "Variant" | "Other"
EnumWithVariantAliasAndRename: "Variant" | "Other"
InternallyTaggedWithAlias: { field: string } | { other: number }
AdjacentlyTaggedWithAlias: { field: string } | { other: number }
UntaggedWithAlias: { field: string } | { other: number }
EmptyEnum: never
EmptyEnumTagged: never
EmptyEnumTaggedWContent: never
EmptyEnumUntagged: never
TaggedEnumOfUnitStruct: UnitStruct
TaggedEnumOfEmptyBracedStruct: EmptyBracedStruct
TaggedEnumOfEmptyTupleStruct: EmptyTupleStruct
TaggedEnumOfEmptyTupleBracedStructs: EmptyBracedStruct
TaggedStructOfStructWithTuple: TupleStructWithTuple
SkipOnlyField: Record<string, never>
SkipField: {
	b: number,
}
SkipOnlyVariantExternallyTagged: never
SkipOnlyVariantInternallyTagged: never
SkipOnlyVariantAdjacentlyTagged: never
SkipOnlyVariantUntagged: never
SkipVariant: { A: string }
SkipUnnamedFieldInVariant: "A" | { B: [number] }
SkipNamedFieldInVariant: { A: Record<string, never> } | { B: { b: number } }
TransparentWithSkip: null
TransparentWithSkip2: string
TransparentWithSkip3: string
SkipVariant2: string
SkipVariant3: { A: { a: string } }
SkipStructFields: {
	a: number,
}
SpectaSkipNonTypeField: {
	a: number,
}
FlattenA: {
	a: number,
	b: number,
}
FlattenB: (FlattenA) & {
	c: number,
}
FlattenC: (FlattenA) & {
	c: number,
}
FlattenD: {
	a: FlattenA,
	c: number,
}
FlattenE: {
	b: (FlattenA) & {
		c: number,
	},
	d: number,
}
FlattenF: {
	b: (FlattenA) & {
		c: number,
	},
	d: number,
}
FlattenG: {
	b: FlattenB,
	d: number,
}
TupleNested: [number[], [number[], number[]], [number[], number[], number[]]]
Generic1<()>: {
	value: null,
	values: null[],
}
GenericAutoBound<()>: {
	value: null,
	values: null[],
}
GenericAutoBound2<()>: {
	value: null,
	values: null[],
}
Container1: {
	foo: Generic1<number>,
	bar: Generic1<number>[],
	baz: { [key in string]: Generic1<string> },
}
Generic2<(), String, i32>: { A: null } | { B: [string, string, string] } | { C: number[] } | { D: null[][][] } | { E: { a: null; b: string; c: number } } | { X: number[] } | { Y: number } | { Z: number[][] }
GenericNewType1<()>: null[][]
GenericTuple<()>: [null, null[], null[][]]
GenericStruct2<()>: {
	a: null,
	b: [null, null],
	c: [null, [null, null]],
	d: [null, null, null],
	e: [([null, null]), ([null, null]), ([null, null])],
	f: null[],
	g: null[][],
	h: ([([null, null]), ([null, null]), ([null, null])])[],
}
InlineGenericNewtype<String>: string
InlineGenericNested<String>: [string, string[], [string, string], { [key in string]: string }, string | null, "Unit" | { Unnamed: string } | { Named: { value: string } }]
InlineFlattenGenericsG<()>: {
	t: null,
}
InlineFlattenGenerics: (InlineFlattenGenericsG<string>) & {
	g: InlineFlattenGenericsG<string>,
	gi: {
		t: string,
	},
}
GenericParameterOrderPreserved: {
	pair: Pair<number, string>,
}
